<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.diego.rxmovies.data.model.Movie" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="?attr/background_card_color"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/color_stroke_card"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_img"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:contentDescription="@string/movie_image"
                app:movieImage="@{movie}"
                tools:ignore="ImageContrastCheck"
                tools:scaleType="fitCenter"
                tools:src="@drawable/ic_place_holder" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/color_on_surface_emphasis_high"
                app:movieTitle="@{movie}"
                tools:text="@string/movie_title_example" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="@color/color_on_surface_emphasis_medium"
                    app:layout_constraintBottom_toBottomOf="@+id/movie_rating"
                    app:layout_constraintEnd_toStartOf="@+id/movie_rating"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/movie_rating"
                    app:movieReleaseDate="@{movie}"
                    tools:text="@string/movie_release_date_example" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="@color/color_on_surface_emphasis_medium"
                    app:drawableLeftCompat="@drawable/ic_star"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:movieRating="@{movie}"
                    tools:ignore="TextContrastCheck"
                    tools:text="2.2" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
